--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,10 +1,14 @@
 <h2>Here are all the tracks</h2>
 
 <ul>
-<% Track.all.each do |track| %>
-   <li><%= link_to "#{track.name}", track %></li>
+<% @tracks.each do |track| %>
+   <li><%= link_to track.name, track_path(track) %></li>
 <% end %>
 </ul>
+
+
+
+<%= link_to "New Track", new_track_path %>
 
 
 
