--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= link_to "All Tracks",  tracks_path  %>
       <%= link_to "Me", current_driver %>
       <%= link_to "Sign Up", signup_path%>
-    
+      <%= link_to "New Laptime",  new_laptime_path  %>
       <%= link_to "Sign In", signin_path%>
    
   </head>
