adds users and signup/signin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,21 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-      <%= link_to "Sign Out", signout_path, method: :delete %>
-      <%= link_to "All Tracks",  tracks_path  %>
-      <%= link_to "Me", current_driver %>
-      <%= link_to "Sign Up", signup_path%>
-      <%= link_to "New Laptime",  new_laptime_path  %>
-      <%= link_to "Sign In", signin_path%>
-   
+
+      <%if current_driver %>
+        <%= link_to "Sign Out", signout_path, method: :delete %>
+        <%= link_to "All Tracks",  tracks_path  %>
+        <%= link_to "Me", current_driver %>
+        
+        <%= link_to "New Laptime",  new_laptime_path  %>
+        
+      <% else %>
+        <%= link_to "Sign In", signin_path%>
+        <%= link_to "Sign Up", signup_path%>
+      <% end %>
+
+
+
   </head>
 
   <body>
