--- a/app/views/drivers/_driverform.html.erb
+++ b/app/views/drivers/_driverform.html.erb
@@ -1,8 +1,8 @@
 <%= form_for @driver do |f|%>
-    <%= f.label :name%>
+    <%= f.label "name"%>
     <%= f.text_field :name%>
 
-    <%= f.label :password%>
+    <%= f.label "password"%>
     <%= f.password_field :password%>
 
 
